<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">i*de*a</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Don\'t have an account? Sign up</string>
    <string name="btn_link_to_login">Already registered. Login me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
...
    <string name="nav_livingroom">Livingroom</string>
    <string name="nav_bedroom">Bedroom</string>
    <string name="nav_interior">Interior</string>
    <string name="nav_landscape">Landscape</string>
    <string name="nav_architecture">Architecturee</string>
    <string name="nav_design">Design</string>
    <string name="nav_open_drawer">Open Drawer</string>
    <string name="nav_close_drawer">Close Drawer</string>
    <string name="app_bar_settings">Settings</string>
    <string name="app_bar_share">Share</string>
    <string name="fragment_home">Home Fragment</string>
    <string name="fragment_about">About Fragment</string>
    <string name="fragment_home_next">Next Fragment</string>
...
